# FooOS_x86

./: .bochsrc  .gitignore  CMakeLists.txt  README.md  boot.img  cmake_run.sh  docker_container_run_once_linux.sh  docker_container_run_once_mac.sh  docker_container_run_with_exist.sh  docker_img_build.sh  docker_img_build_linux.sh  docker_img_build_mac.sh  run.cmake  run.sh
bochs-docker/: Dockerfile
bochs-docker/linux/: Dockerfile
bootloader/: CMakeLists.txt  Makefile  boot.S  boot.asm  fat12.inc  loader.asm
kernel/: CMakeLists.txt  Makefile  head.S  lib.h  main.c
notes/: Cluster.md  FAT12.md
